[package]
name = "serde-json-utils"
version = "0.2.1"
author = ["Marirs <marirs@gmail.com>", "Andrey Mnatsakanov <andrey@3ig.kiev.ua>"]
description = "Util crate for serde_json Value"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/marirs/serde-json-utils"
homepage = "https://github.com/marirs/serde-json-utils"
edition = "2021"

[dependencies]
ordered-float = "1"
serde_json = "1"
thiserror = "1"
serde = { version = "1.0.137", features = ["derive"] }

[lib]
name = "serde_json_utils"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true